samples/_failures_safe/1761461326_54e342_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_534b3de2.c: In function ‘main’:
./samples/SAFE/__tmp_534b3de2.c:152:28: error: missing terminating " character
  152 |                     printf("Error: Matrices must have same dimensions for addition
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_534b3de2.c:152:21: error: expected expression at end of input
  152 |                     printf("Error: Matrices must have same dimensions for addition
      |                     ^~~~~~
./samples/SAFE/__tmp_534b3de2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_534b3de2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_534b3de2.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_534b3de2.c:152:21: error: expected declaration or statement at end of input
